--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body {
     place-items: center;
     height: 100vh;
     background-color: rgb(0, 0, 0);
-
 }
 
 /* div container all */
@@ -34,7 +33,6 @@ body {
 #container #cat img {
     height: 75px;
     width: auto;
-
 }
 
 /* velocidade de animação do gato */
@@ -43,19 +41,17 @@ body {
 }
 
 @keyframes animateCat {
-
     0%,
     100% {
         bottom: 28px;
     }
-
     45%,
     55% {
         bottom: 160px;
     }
 }
 
-/* gato block (rolando) */
+/* gato block */
 #container #block {
     height: 80px;
     width: 125px;
@@ -68,7 +64,6 @@ body {
     height: 65px;
     width: auto;
     transform: scaleX(-1);
-
 }
 
 .blockActive {
@@ -79,12 +74,12 @@ body {
     0% {
         right: -125px;
     }
-
     100% {
         right: 100%;
     }
 }
-/* chão dos gatos */
+
+/* chão */
 #container #road {
     height: 30px;
     width: 1200px;
@@ -105,11 +100,11 @@ body {
     0% {
         left: 0;
     }
-
     100% {
         left: -800px;
     }
 }
+
 /* nuvem */
 #container #cloud {
     height: 80px;
@@ -131,11 +126,11 @@ body {
     0% {
         left: -2000px;
     }
-
     100% {
         left: 100%;
     }
 }
+
 /* placar - pontuação */
 #score {
     height: auto;
@@ -144,8 +139,8 @@ body {
     top: 20px;
     right: 0;
     color: white;
-
 }
+
 /* fim de jogo */
 #gameOver {
     display: none;
